--- a/libs/css/main.css
+++ b/libs/css/main.css
@@ -50,8 +50,7 @@ img.img-size-2 {
   padding-top: 20px; }
 
 .login-page {
-  width: 350px;
-  margin: 7% auto;
+  margin: auto;
   padding: 0 20px;
   background-color: #f9f9f9;
   border: 1px solid #f2f2f2; }
@@ -71,8 +70,6 @@ img.img-size-2 {
   background-color: #f5f5f5;
   border-bottom: 2px solid #3498DB;
   font-size: 15px;
-  text-transform: uppercase;
-  letter-spacing: .5px;
   padding: 15px; }
 
 .panel-box {
@@ -104,22 +101,6 @@ img.img-size-2 {
   border-radius: 0 3px 0 3px; }
   .panel-value h2 {
     margin-top: 30px; }
-
-#header {
-  position: fixed;
-  z-index: 99;
-  top: 0;
-  left: 0;
-  background-color: #fff;
-  width: 100%;
-  height: 65px;
-  line-height: 65px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  -khtml-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  -ms-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  -o-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); }
 
 header > .logo {
   color: #fff;
