--- a/libs/css/main.scss
+++ b/libs/css/main.scss
@@ -70,8 +70,7 @@ img.img-size-2 {
 }
 
 .login-page {
-  width: 350px;
-  margin: 7% auto;
+  margin: auto;
   padding: 0 20px;
   background-color: $loginBoxBackground;
   border: 1px solid $loginBoxBorder;
@@ -97,8 +96,6 @@ img.img-size-2 {
   background-color: $lightestGray;
   border-bottom: 2px solid $headerAndFormControlColor;
   font-size: 15px;
-  text-transform: uppercase;
-  letter-spacing: .5px;
   padding: 15px;
 }
 
@@ -136,18 +133,6 @@ img.img-size-2 {
   h2 {
     margin-top: 30px;
   }
-}
-
-#header {
-  position: fixed;
-  z-index: 99;
-  top: 0;
-  left: 0;
-  background-color: $white;
-  width: 100%;
-  height: 65px;
-  line-height: 65px;
-  @include box-shadow(0, 1px, 2px, rgba(0, 0, 0, 0.1));
 }
 
 header > .logo {
